{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 18,
  "lineage": "44a7a6d7-c6cd-b2ea-100a-a879f2565ff4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "eva",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0498759fb46ecb324",
            "id": "rtb-0498759fb46ecb324",
            "owner_id": "040142736490",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02526575b6f030989",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02526575b6f030989",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-08882d7ac0fb11cb3"
          },
          "dependencies": [
            "aws_internet_gateway.eva",
            "aws_vpc.eva"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "eva",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1a94722dcbff94c",
            "arn": "arn:aws:ec2:eu-central-1:040142736490:instance/i-04696853ccb96fe8a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04696853ccb96fe8a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2a05:d014:301:a601:ef0e:5434:d814:b8ed"
            ],
            "key_name": "mic92-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-020bfa37ef05a789f",
            "private_dns": "ip-172-68-18-178.eu-central-1.compute.internal",
            "private_ip": "172.68.18.178",
            "public_dns": "ec2-52-59-172-193.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.59.172.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b7d0c9c22925dce2",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f528b1ef56fb7193",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-057287e516f1ea0de"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.eva",
            "aws_security_group.eva",
            "aws_subnet.eva"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eva",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:040142736490:internet-gateway/igw-02526575b6f030989",
            "id": "igw-02526575b6f030989",
            "owner_id": "040142736490",
            "vpc_id": "vpc-08882d7ac0fb11cb3"
          },
          "dependencies": [
            "aws_vpc.eva"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eva",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08490724dd5b7a431",
            "route_table_id": "rtb-0498759fb46ecb324",
            "subnet_id": "subnet-0f528b1ef56fb7193"
          },
          "dependencies": [
            "aws_default_route_table.eva",
            "aws_internet_gateway.eva",
            "aws_subnet.eva",
            "aws_vpc.eva"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eva",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:040142736490:security-group/sg-057287e516f1ea0de",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057287e516f1ea0de",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20200808065749813800000001",
            "name_prefix": "",
            "owner_id": "040142736490",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-08882d7ac0fb11cb3"
          },
          "dependencies": [
            "aws_vpc.eva"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eva",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:040142736490:subnet/subnet-0f528b1ef56fb7193",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.68.16.0/20",
            "id": "subnet-0f528b1ef56fb7193",
            "ipv6_cidr_block": "2a05:d014:301:a601::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0d20eecd5a9fb74ef",
            "map_public_ip_on_launch": true,
            "owner_id": "040142736490",
            "vpc_id": "vpc-08882d7ac0fb11cb3"
          },
          "dependencies": [
            "aws_vpc.eva"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eva",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:040142736490:vpc/vpc-08882d7ac0fb11cb3",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "172.68.0.0/16",
            "default_network_acl_id": "acl-0108c1586c1f6694a",
            "default_route_table_id": "rtb-0498759fb46ecb324",
            "default_security_group_id": "sg-04d8962abcd6024de",
            "dhcp_options_id": "dopt-4409aa2e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08882d7ac0fb11cb3",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-040607b9d399d44df",
            "ipv6_cidr_block": "2a05:d014:301:a600::/56",
            "main_route_table_id": "rtb-0498759fb46ecb324",
            "owner_id": "040142736490"
          }
        }
      ]
    }
  ]
}